# translation-api

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: CODEOWNERS
.github/workflows/: docker-hub.yml  format-check.yml  lint.yml
api/: Cargo.toml
api/src/: main.rs
api/src/dependency/translation/: claude.rs  deepl.rs  mod.rs  openai.rs
api/src/router/: health.rs  mod.rs  translate.rs
claude/: Cargo.toml
claude/src/: client.rs  error.rs  model.rs
deepl/: Cargo.toml
deepl/src/: client.rs  error.rs
env/src/: lib.rs
openai/: Cargo.toml
openai/src/: client.rs  error.rs  model.rs
translation/: Cargo.toml
translation/src/: claude.rs  deepl.rs  lib.rs  openai.rs
