[workspace]
members = [ "api", "claude", "deepl", "openai", "translation"]
resolver = "2"

[workspace.dependencies]
actix-http = "3.3.1"
actix-rt = "2.8.0"
actix-service = "2.0.2"
actix-web = "4"
anyhow = "1.0.75"
async-trait = "0.1.77"
derive_more = "0.99"
env_logger = "0.11.3"
futures = "0.3.29"
isolang = { version = "2.4.0", features = ["english_names", "local_names", "serde"] }
itertools = "0.13"
log = "0.4.21"
reqwest = "0.12"
reqwest-middleware = { version = "0.3", features = ["json"] }
reqwest-retry = "0.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde-enum-str = "0.4.0"
serde_json = "1"
serde_with = "3"
thiserror = "1.0.57"
tokio = { version = "1.24", features = ["sync"] }
