[package]
name = "translation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
claude = { path = "../claude" }
deepl = { path = "../deepl" }
env = { path = "../env" }

async-trait = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
