[package]
name = "translation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
claude = { path = "../claude" }
deepl = { path = "../deepl" }
openai = { path = "../openai" }

async-trait = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
isolang = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
